deployment/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    env: production
    name: quantum-mlops
  name: quantum-mlops
